--- a/views/page-add.ejs
+++ b/views/page-add.ejs
@@ -29,7 +29,9 @@
     </div>
 
     <a type="submit" data-theme="a" data-icon="plus" data-inline="true">添加页面</a>
-    <a href="http://en.wikipedia.org/wiki/Wikipedia:Cheatsheet" target="_blank">编辑说明</a>
+    <br/>
+    <br/>
+    支持<a href="http://en.wikipedia.org/wiki/Wikipedia:Cheatsheet" target="_blank">wiki语法</a>，html
 </div>
 
 <% include include/content-footer %>
