--- a/views/page-edit.ejs
+++ b/views/page-edit.ejs
@@ -31,7 +31,7 @@
     <a type="submit" data-theme="a" data-icon="edit" data-inline="true">修 改</a>
     <br/>
     <br/>
-    支持<a href="http://en.wikipedia.org/wiki/Wikipedia:Cheatsheet" target="_blank">wiki语法</a>，html，javascript
+    支持<a href="http://en.wikipedia.org/wiki/Wikipedia:Cheatsheet" target="_blank">wiki语法</a>，html
 </div>
 
 <% include include/content-footer %>
