add login button on error page

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -20,6 +20,9 @@
 
 <a href="#" data-rel="back" data-role="button" data-icon="arrow-l" data-iconpos="left" data-inline="true">返回</a>
 
+<% if(!visitor) { %>
+    <% include include/login %>
+<% } %>
 
 <% include include/content-footer %>
 </div><!--/content-->
