--- a/views/user-setting.ejs
+++ b/views/user-setting.ejs
@@ -32,12 +32,7 @@
         <% include include/login %>
     <% } %>
   
-  <h3>系统简介</h3>
-  <div>
-    <p>知识在于积累！七日知识管理系统是面向个人的知识管理系统，可以随时添加、编辑和查看你的页面，不断积累各方面知识。</p>
-    <p>了解更多请查看：<a href="/page/51aed8e356beb4212b000002" title="七日知识管理系统">本系统介绍文档</a></p>
-  </div>
-
+  <% include include/about %>
   <a href="#" data-rel="back" data-role="button" data-icon="arrow-l" data-iconpos="left" data-inline="true">返回</a>
 
 <% include include/content-footer %>
