--- a/views/page-show.ejs
+++ b/views/page-show.ejs
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="七日, 个人, 知识管理, 维基, 百科, wiki" />
-
+<meta property="qc:admins" content="016247421216375" />
 <title><%=page.title%></title>
 
 <% include include/inhead %>
