--- a/views/include/inhead.ejs
+++ b/views/include/inhead.ejs
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="/stylesheets/lib/jquery.mobile-1.3.1/jquery.mobile-1.3.1.min.css" />
-<link rel="stylesheet" href="/stylesheets/jqm-qiri.css" />
+<link rel="stylesheet" href="/stylesheets/main.css" />
 <script src="/javascripts/lib/require-2.1.6.min.js" data-main="/javascripts/main.js?1" defer async="true"></script>
