--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -29,12 +29,11 @@ blockquote
   color #777
   text-shadow 0 1px 0 #fff
   border-top 1px solid rgba(0,0,0,.08)
-  margin-top: 2em;
-
-.jqm-footer p
-  font-size .8em
-  font-family 'Open Sans', sans-serif
-  font-weight 300
+  margin-top 2em
+  p
+    font-size .8em
+    font-family 'Open Sans', sans-serif
+    font-weight 300
 
 .footLinks
   font-size 14px
@@ -42,8 +41,19 @@ blockquote
   padding 10px 0 0
   color #888
   font-size 14px
+  .ui-link
+    font-size 14px
+    font-weight normal
 
-.footLinks .ui-link
-  font-size 14px
-  font-weight normal
+.share-link
+  margin-left 10px
+  a
+    float left
+    display inline
+    line-height 16px
+    padding-left 20px
+    background-image url(/images/icons-share.png)
+    background-repeat no-repeat
+  .qq
+      background-position 0 0
 
