--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -28,3 +28,8 @@
         </div>
 </div>
 
+<div class="share-link">
+  <br/>
+  <a data-ajax="false" href="/auth/qq" class="qq">QQ登陆</a>
+  <br />
+</div>
