--- a/views/include/inhead.ejs
+++ b/views/include/inhead.ejs
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/stylesheets/main.css" />
+<link rel="stylesheet" href="/stylesheets/main.css?1" />
 <script src="/javascripts/lib/require-2.1.6.min.js" data-main="/javascripts/main.js?1" defer async="true"></script>
