--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -28,6 +28,7 @@
         </div>
 </div>
 
+<% var config = config %>
 <% if(config && config.get('qqLogin') && config.get('qqLogin').enabled) { %>
 <div class="share-link">
   <br/>
