--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -28,7 +28,7 @@
         </div>
 </div>
 
-<% if(config && config.get('qqLogin') && config.get('qqLogin').enabled) { %>
+<% if(config.get('qqLogin') && config.get('qqLogin').enabled) { %>
 <div class="share-link">
   <br/>
   <a data-ajax="false" href="/auth/qq" class="qq">QQ登陆</a>
