add print.styl for print

--- a/views/include/inhead.ejs
+++ b/views/include/inhead.ejs
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="/stylesheets/main.css?1" />
+<link rel="stylesheet" href="/stylesheets/print.css?1" media="print" />
 <script src="/javascripts/lib/require-2.1.6.min.js" data-main="/javascripts/main.js?2" defer async="true"></script>
